--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -96,7 +96,7 @@
         android:layout_marginStart="158dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="112dp"
-        android:text="Button"
+        android:text="Add Product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
