--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -89,51 +89,27 @@
             android:layout_width="match_parent"
             android:layout_height="20dp" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
 
             <Button
-                android:id="@+id/addProduct"
+                android:id="@+id/adminView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add product" />
+                android:text="Admin view"
+                android:textSize="16dp" />
+
         </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="20dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/addCoupon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add coupon" />
-        </LinearLayout>
 
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/deleteCoupon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Delete Coupon" />
-        </LinearLayout>
 
     </LinearLayout>
 
