--- a/app/src/main/res/layout/add_coupon.xml
+++ b/app/src/main/res/layout/add_coupon.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="300dp"
-        android:text="Button"
+        android:text="Add coupon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DiscountName" />
