--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,59 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TableLayout android:id="@+id/TableLayout01"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#55771B">
+
+            <TextView
+                android:id="@+id/asFilter"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Ascending Price Order"
+                android:textAlignment="center"
+                android:paddingVertical="10dp"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:onClick="onClick"
+                android:clickable="true">
+
+            </TextView>
+
+        </TableLayout>
+
+        <TableLayout android:id="@+id/TableLayout02"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#55771B">
+
+            <TextView
+                android:id="@+id/desFilter"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Descending Price Order"
+                android:textSize="15dp"
+                android:textAlignment="center"
+                android:paddingVertical="10dp"
+                android:textStyle="bold"
+                android:onClick="onClick"
+                android:clickable="true">
+            </TextView>
+
+        </TableLayout>
+
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
